Misc bugfixes and additions
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@13789 72102866-910b-0410-8b05-ffd578937521

--- a/Source/GNUmakefile
+++ b/Source/GNUmakefile
@@ -44,7 +44,8 @@ libStepTalk_OBJC_FILES = \
     STModule.m \
     STScripting.m \
     STSelector.m \
-    NSNumber+additions.m
+    NSNumber+additions.m \
+    NSObject+additions.m
 
 STEPTALK_HEADER_FILES = \
     STEnvironment.h \
@@ -54,6 +55,7 @@ STEPTALK_HEADER_FILES = \
     STObjectReference.h  \
     STUndefinedObject.h   \
     NSInvocation+additions.h \
+    NSObject+additions.h \
     STObjCRuntime.h \
     STEngine.h \
     STModule.h \
