Scripts manager added
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@13926 72102866-910b-0410-8b05-ffd578937521

--- a/Modules/GNUmakefile
+++ b/Modules/GNUmakefile
@@ -38,6 +38,7 @@ SUBPROJECTS = \
     SimpleTranscript \
     Foundation \
     ObjectiveC \
+    StepTalk \
     $(APPKIT)
 
 -include GNUMakefile.preamble
