--- a/Languages/Smalltalk/GNUmakefile
+++ b/Languages/Smalltalk/GNUmakefile
@@ -62,5 +62,5 @@ include $(GNUSTEP_MAKEFILES)/bundle.make
 -include GNUMakefile.postamble
 
 STGrammar.m: STGrammar.y
-	$(YACC) -d -pSTC -o$@ $<
+	$(BISON) -p STC -o $@ $<
 
