Fixed AppKit constants
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@14443 72102866-910b-0410-8b05-ffd578937521

--- a/Modules/AppKit/AppKitInfo.plist
+++ b/Modules/AppKit/AppKitInfo.plist
@@ -87,6 +87,7 @@
 /*        NSSimpleHorizontalTypesetter,*/
         NSSlider,
         NSSliderCell,
+        NSSound,
         NSSpellChecker,
         NSSpellServer,
         NSSplitView,
