Added GDL2 module
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15177 72102866-910b-0410-8b05-ffd578937521

--- a/Modules/Foundation/FoundationInfo.plist
+++ b/Modules/Foundation/FoundationInfo.plist
@@ -1,13 +1,14 @@
 {
     STClasses = (
 
-        GSHTMLParser,
-        GSHTMLSAXHandler,
         GSMimeCodingContext,
         GSMimeDocument,
         GSMimeParser,
-        GSSAXHandler,
+        GSMimeHeader,
 
+        GSHTMLParser,
+        GSHTMLSAXHandler,
+        GSSAXHandler,
         GSXMLAttribute,
         GSXMLDocument,
         GSXMLNamespace,
