GDL2.stenv added
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15602 72102866-910b-0410-8b05-ffd578937521

--- a/Modules/GDL2/GNUmakefile
+++ b/Modules/GDL2/GNUmakefile
@@ -48,7 +48,7 @@ BUNDLE_INSTALL_DIR:=$(GNUSTEP_INSTALLATION_DIR)/Library/StepTalk/Modules
 
 -include GNUmakefile.preamble
 include $(GNUSTEP_MAKEFILES)/bundle.make
--include GNUMakefile.postamble
+-include GNUmakefile.postamble
 
 
 GDL2Constants.m : GDL2Constants.list
