Small Fix for shell
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15618 72102866-910b-0410-8b05-ffd578937521

--- a/Source/GNUmakefile
+++ b/Source/GNUmakefile
@@ -29,6 +29,7 @@ LIBRARY_NAME = libStepTalk
 
 libStepTalk_OBJC_FILES = \
     NSInvocation+additions.m \
+    STBundle.m \
     STBehaviourInfo.m \
     STClassInfo.m \
     STEngine.m \
@@ -50,6 +51,7 @@ libStepTalk_OBJC_FILES = \
     NSObject+additions.m
 
 STEPTALK_HEADER_FILES = \
+    STBundle.h \
     STEngine.h \
     STEnvironment.h \
     STExterns.h \
