Removed inclusion of source-distribution.make
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15651 72102866-910b-0410-8b05-ffd578937521

--- a/Modules/StepTalk/StepTalkInfo.plist
+++ b/Modules/StepTalk/StepTalkInfo.plist
@@ -3,6 +3,7 @@
         STEnvironment,
         STLanguage,
         STScript,
-        STScriptsManager
+        STScriptsManager,
+        STBundle
     );
 }
