--- a/Modules/StepTalk/StepTalkInfo.plist
+++ b/Modules/StepTalk/StepTalkInfo.plist
@@ -1,9 +1,11 @@
 {
+    STScriptingInfoClass = StepTalkModule;
+    
     STClasses = (
         STEnvironment,
         STLanguage,
         STScript,
-        STScriptsManager
-        /* STBundle */
+        STScriptsManager,
+        STBundleInfo
     );
 }
