ObjectiveC module compilation fix
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15762 72102866-910b-0410-8b05-ffd578937521

--- a/Modules/ObjectiveC/GNUmakefile
+++ b/Modules/ObjectiveC/GNUmakefile
@@ -38,6 +38,10 @@ ObjectiveC_PRINCIPAL_CLASS = ObjectiveCModule
         
 ObjectiveC_RESOURCE_FILES = ScriptingInfo.plist
 
+StepTalk_BUNDLE_LIBS += -lStepTalk
+ADDITIONAL_INCLUDE_DIRS += -I../../Source/Headers
+ADDITIONAL_LIB_DIRS += -L../../Source/$(GNUSTEP_OBJ_DIR)
+
 BUNDLE_INSTALL_DIR:=$(GNUSTEP_INSTALLATION_DIR)/Library/StepTalk/Modules
 
 -include GNUmakefile.preamble
