Compiler warnings cleanup
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15787 72102866-910b-0410-8b05-ffd578937521

--- a/Examples/Shell/GNUmakefile
+++ b/Examples/Shell/GNUmakefile
@@ -29,6 +29,7 @@ TOOL_NAME = stshell
 stshell_OBJC_FILES = STShell.m STShell+output.m stshell.m
 
 ADDITIONAL_TOOL_LIBS += -lStepTalk -lreadline -lncurses
+ADDITIONAL_OBJCFLAGS = -Wall -Werror
 
 -include GNUmakefile.preamble
 include $(GNUSTEP_MAKEFILES)/tool.make
