Fix doc installation
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@15933 72102866-910b-0410-8b05-ffd578937521

--- a/Source/GNUmakefile
+++ b/Source/GNUmakefile
@@ -87,10 +87,10 @@ StepTalk_DOC_INSTALL_DIR = Developer
 StepTalk_HEADER_FILES_DIR = $(HEADER_DIR)
 StepTalk_AGSDOC_FILES = StepTalk.gsdoc $(STEPTALK_HEADER_FILES)
 StepTalk_AGSDOC_FLAGS = \
-        -DocumentationDirectory ../Documentation/StepTalk \
         -HeaderDirectory Headers/StepTalk \
         -Up StepTalk \
         -Declared StepTalk
+#        -DocumentationDirectory ../Documentation/StepTalk \
 
 
 -include GNUmakefile.preamble
