Added scripting menu
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16230 72102866-910b-0410-8b05-ffd578937521

--- a/ApplicationScripting/Source/GNUmakefile
+++ b/ApplicationScripting/Source/GNUmakefile
@@ -45,7 +45,8 @@ ApplicationScripting_RESOURCE_FILES = ScriptingInfo.plist
 
 ApplicationScripting_LOCALIZED_RESOURCE_FILES = \
         ScriptsPanel.gorm \
-        TranscriptWindow.gorm
+        TranscriptWindow.gorm \
+        ScriptingMenu.gorm
 
 -include GNUmakefile.preamble
 include $(GNUSTEP_MAKEFILES)/bundle.make
