Added Do&Show selection to NSTextView
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16234 72102866-910b-0410-8b05-ffd578937521

--- a/ApplicationScripting/Source/GNUmakefile
+++ b/ApplicationScripting/Source/GNUmakefile
@@ -35,6 +35,7 @@ ApplicationScripting_OBJC_FILES = \
     STApplicationScriptingController.m \
     STEnvironment+additions.m \
     STScriptsPanel.m \
+    NSTextView+ScriptExecution.m \
     STTranscript.m 
 
 ApplicationScripting_BUNDLE_LIBS += -lStepTalk $(GUI_LIBS)
