Scripting documentation cleanup
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16242 72102866-910b-0410-8b05-ffd578937521

--- a/ApplicationScripting/GNUmakefile
+++ b/ApplicationScripting/GNUmakefile
@@ -27,13 +27,10 @@ GNUSTEP_MAKEFILES = $(GNUSTEP_SYSTEM_ROOT)/Makefiles
 include $(GNUSTEP_MAKEFILES)/common.make
 include Version
 
-PACKAGE_NAME = ApplicationTalk
+PACKAGE_NAME = ApplicationScripting
 
 SUBPROJECTS = \
-    Source \
-#    Apps \
-#    Tools 
-
+    Source 
 
 -include GNUMakefile.preamble
 include $(GNUSTEP_MAKEFILES)/aggregate.make
