--- a/Modules/SimpleTranscript/GNUmakefile
+++ b/Modules/SimpleTranscript/GNUmakefile
@@ -36,6 +36,8 @@ SimpleTranscript_RESOURCE_FILES = ScriptingInfo.plist
 
 BUNDLE_INSTALL_DIR:=$(GNUSTEP_INSTALLATION_DIR)/Library/StepTalk/Modules
 
+ADDITIONAL_OBJCFLAGS = -Wall -Wno-import
+
 -include GNUmakefile.preamble
 include $(GNUSTEP_MAKEFILES)/bundle.make
 -include GNUMakefile.postamble
