--- a/Tools/GNUmakefile
+++ b/Tools/GNUmakefile
@@ -47,6 +47,7 @@ stupdate_languages_OBJC_FILES =  \
 ADDITIONAL_INCLUDE_DIRS += -I../Source/Headers
 ADDITIONAL_TOOL_LIBS += -lStepTalk
 ADDITIONAL_LIB_DIRS += -L../Source/$(GNUSTEP_OBJ_DIR)
+ADDITIONAL_OBJCFLAGS = -Wall -Wno-import
 
 -include GNUmakefile.preamble
 include $(GNUSTEP_MAKEFILES)/tool.make
