--- a/Examples/Shell/GNUmakefile
+++ b/Examples/Shell/GNUmakefile
@@ -29,7 +29,8 @@ TOOL_NAME = stshell
 stshell_OBJC_FILES = STShell.m STShell+output.m stshell.m
 
 ADDITIONAL_TOOL_LIBS += -lStepTalk -lreadline -lncurses
-# ADDITIONAL_OBJCFLAGS = -Wall -Werror
+
+ADDITIONAL_OBJCFLAGS = -Wall -Wno-import
 
 -include GNUmakefile.preamble
 include $(GNUSTEP_MAKEFILES)/tool.make
