--- a/Modules/ObjectiveC/GNUmakefile
+++ b/Modules/ObjectiveC/GNUmakefile
@@ -44,6 +44,8 @@ ADDITIONAL_LIB_DIRS += -L../../Source/$(GNUSTEP_OBJ_DIR)
 
 BUNDLE_INSTALL_DIR:=$(GNUSTEP_INSTALLATION_DIR)/Library/StepTalk/Modules
 
+ADDITIONAL_OBJCFLAGS = -Wall -Wno-import
+
 -include GNUmakefile.preamble
 include $(GNUSTEP_MAKEFILES)/bundle.make
 -include GNUMakefile.postamble
