--- a/Source/GNUmakefile
+++ b/Source/GNUmakefile
@@ -78,7 +78,7 @@ STEPTALK_ENVDEFS_DIR = $(STEPTALK_LIBRARY_DIR)/Environments
 ADDITIONAL_INCLUDE_DIRS += -I./Headers
 
 ADDITIONAL_CPPFLAGS += -pipe 
-ADDITIONAL_OBJCFLAGS = -Wno-import
+ADDITIONAL_OBJCFLAGS = -Wno-import -DSTEPTALK_VERSION=$(STEPTALK_VERSION)
 
 DOCUMENT_NAME = StepTalk
 
