Added library reference documentation
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16509 72102866-910b-0410-8b05-ffd578937521

--- a/Source/GNUmakefile
+++ b/Source/GNUmakefile
@@ -90,7 +90,7 @@ StepTalk_AGSDOC_FLAGS = \
         -HeaderDirectory Headers/StepTalk \
         -Up StepTalk \
         -Declared StepTalk \
-        -DocumentationDirectory ../Documentation/StepTalk
+        -DocumentationDirectory ../Documentation/Reference
 
 
 -include GNUmakefile.preamble
