Updated application scripting
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16600 72102866-910b-0410-8b05-ffd578937521

--- a/Modules/AppKit/ScriptingInfo.plist
+++ b/Modules/AppKit/ScriptingInfo.plist
@@ -1,7 +1,7 @@
 {
-    STScriptingInfoClass = STAppKitModule;
+    ScriptingInfoClass = STAppKitModule;
     
-    STClasses = 
+    Classes = 
     (
         NSActionCell,
         NSAffineTransform,
