Added icons and ChangeLog
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16622 72102866-910b-0410-8b05-ffd578937521

--- a/Applications/ScriptPapers/GNUmakefile
+++ b/Applications/ScriptPapers/GNUmakefile
@@ -49,9 +49,10 @@ ScriptPapers_OBJC_FILES= \
 ScriptPapers_LOCALIZED_RESOURCE_FILES= \
         ScriptPapers.gorm  \
         Paper.gorm
-        
-ScriptPapers_RESOURCE_FILES = \
 
+ScriptPapers_RESOURCE_FILES= \
+        Images/ScriptPaperFile.tiff  \
+        Images/ScriptPapers.tiff
         
 ADDITIONAL_OBJCFLAGS =  
 
