Fixed linking under mingw32
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16682 72102866-910b-0410-8b05-ffd578937521

--- a/Source/GNUmakefile
+++ b/Source/GNUmakefile
@@ -90,6 +90,9 @@ StepTalk_AGSDOC_FLAGS = \
         -Declared StepTalk \
         -DocumentationDirectory ../Documentation/Reference
 
+ifeq ($(GNUSTEP_TARGET_OS),mingw32)
+    libStepTalk_LIBRARIES_DEPEND_UPON += -lgnustep-base -lobjc
+endif
 
 -include GNUmakefile.preamble
 
