Added some linkage dependencies
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@16697 72102866-910b-0410-8b05-ffd578937521

--- a/Finders/DistributedFinder/GNUmakefile
+++ b/Finders/DistributedFinder/GNUmakefile
@@ -33,6 +33,7 @@ DistributedFinder_BUNDLE_LIBS += -lStepTalk
 
 ADDITIONAL_INCLUDE_DIRS += -I../../Source/Headers
 ADDITIONAL_LIB_DIRS += -L../../Source/$(GNUSTEP_OBJ_DIR)
+ADDITIONAL_TOOL_LIBS += -lStepTalk
 
 BUNDLE_INSTALL_DIR:=$(GNUSTEP_INSTALLATION_DIR)/Library/StepTalk/Finders
 
