--- a/Modules/ObjectiveC/GNUmakefile
+++ b/Modules/ObjectiveC/GNUmakefile
@@ -36,7 +36,7 @@ ObjectiveC_PRINCIPAL_CLASS = ObjectiveCModule
         
 ObjectiveC_RESOURCE_FILES = ScriptingInfo.plist
 
-StepTalk_BUNDLE_LIBS += -lStepTalk
+ObjectiveC_BUNDLE_LIBS += -lStepTalk
 ADDITIONAL_INCLUDE_DIRS += -I../../Source/Headers
 ADDITIONAL_LIB_DIRS += -L../../Source/$(GNUSTEP_OBJ_DIR)
 
