--- a/Examples/Shell/GNUmakefile
+++ b/Examples/Shell/GNUmakefile
@@ -24,7 +24,7 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 TOOL_NAME = stshell
 
-stshell_OBJC_FILES = STShell.m STShell+output.m stshell.m
+stshell_OBJC_FILES = STShell.m STShell+output.m stshell_tool.m
 
 ADDITIONAL_TOOL_LIBS += -lStepTalk -lreadline -lncurses
 
