Added empty implementation of script objects
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@17433 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/GNUmakefile
+++ b/Languages/Smalltalk/GNUmakefile
@@ -45,7 +45,7 @@ Smalltalk_OBJC_FILES = \
         STLiterals.m \
         STMessage.m  \
         STMethodContext.m \
-        STScriptObject.m \
+        STSmalltalkScriptObject.m \
         STStack.m \
         STUndefinedObject+additions.m \
         STSelector+additions.m \
