Changed from lib to framework
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@17436 72102866-910b-0410-8b05-ffd578937521

--- a/Frameworks/GNUmakefile
+++ b/Frameworks/GNUmakefile
@@ -23,24 +23,9 @@
 #
 
 include $(GNUSTEP_MAKEFILES)/common.make
-include Version
-
-PACKAGE_NAME = StepTalk
-CVS_MODULE_NAME = StepTalk
-
-APPSCRIPT=ApplicationScripting
-
-ifeq ($(appkit),no)
-    APPSCRIPT= 
-endif
 
 SUBPROJECTS = \
-    Frameworks \
-    Languages \
-    Finders \
-    Modules \
-    Tools \
-    $(APPSCRIPT)
+    StepTalk
 
 -include GNUMakefile.preamble
 include $(GNUSTEP_MAKEFILES)/aggregate.make
