Removed source again
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@17437 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/GNUmakefile
+++ b/Tools/GNUmakefile
@@ -42,9 +42,10 @@ stalk_OBJC_FILES = \
 stupdate_languages_OBJC_FILES =  \
         stupdate_languages.m
     
-ADDITIONAL_INCLUDE_DIRS += -I../Source/Headers
-ADDITIONAL_TOOL_LIBS += -lStepTalk
-ADDITIONAL_LIB_DIRS += -L../Source/$(GNUSTEP_OBJ_DIR)
+ADDITIONAL_TOOL_LIBS = -lStepTalk
+ADDITIONAL_INCLUDE_DIRS += -I../Frameworks/
+ADDITIONAL_LIB_DIRS += -L../Frameworks/StepTalk/StepTalk.framework/Versions/Current/$(GNUSTEP_TARGET_LDIR)
+
 ADDITIONAL_OBJCFLAGS = -Wall -Wno-import
 
 -include GNUmakefile.preamble
