Cleanup after change
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@17439 72102866-910b-0410-8b05-ffd578937521

--- a/Finders/ApplicationFinder/GNUmakefile
+++ b/Finders/ApplicationFinder/GNUmakefile
@@ -33,8 +33,9 @@ ApplicationFinder_PRINCIPAL_CLASS = STApplicationFinder
 
 ApplicationFinder_BUNDLE_LIBS += -lStepTalk
 
-ADDITIONAL_INCLUDE_DIRS += -I../../Source/Headers
-ADDITIONAL_LIB_DIRS += -L../../Source/$(GNUSTEP_OBJ_DIR)
+ADDITIONAL_BUNDLE_LIBS = -lStepTalk
+ADDITIONAL_INCLUDE_DIRS += -I../../Frameworks/
+ADDITIONAL_LIB_DIRS += -L../../Frameworks/StepTalk/StepTalk.framework/Versions/Current/$(GNUSTEP_TARGET_LDIR)
 
 BUNDLE_INSTALL_DIR:=$(GNUSTEP_INSTALLATION_DIR)/Library/StepTalk/Finders
 
