--- a/Modules/SimpleTranscript/GNUmakefile
+++ b/Modules/SimpleTranscript/GNUmakefile
@@ -34,6 +34,10 @@ SimpleTranscript_RESOURCE_FILES = ScriptingInfo.plist
 
 BUNDLE_INSTALL_DIR:=$(GNUSTEP_INSTALLATION_DIR)/Library/StepTalk/Modules
 
+ADDITIONAL_BUNDLE_LIBS = -lStepTalk
+ADDITIONAL_INCLUDE_DIRS += -I../../Frameworks/
+ADDITIONAL_LIB_DIRS += -L../../Frameworks/StepTalk/StepTalk.framework/Versions/Current/$(GNUSTEP_TARGET_LDIR)
+
 ADDITIONAL_OBJCFLAGS = -Wall -Wno-import
 
 -include GNUmakefile.preamble
