Added missing files
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@17440 72102866-910b-0410-8b05-ffd578937521

--- a/Frameworks/StepTalk/GNUmakefile
+++ b/Frameworks/StepTalk/GNUmakefile
@@ -48,7 +48,7 @@ StepTalk_OBJC_FILES = \
     STUndefinedObject.m  \
     NSNumber+additions.m \
     NSObject+additions.m \
-    SteptalkScriptingInfo.m
+    StepTalkScriptingInfo.m
 
 STEPTALK_HEADER_FILES = \
     STBundleInfo.h \
