Added NSKeyedArchiver and unarchiver
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@18482 72102866-910b-0410-8b05-ffd578937521

--- a/Modules/Foundation/ScriptingInfo.plist
+++ b/Modules/Foundation/ScriptingInfo.plist
@@ -50,6 +50,8 @@
         NSGDate,
         NSHost,
         NSInvocation,
+        NSKeyedArchiver,
+        NSKeyedUnarchiver,
         NSLock,
         NSMethodSignature,
         NSMutableArray,
