Added unimplemented ideas of distant conversations and scripting servers
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@18931 72102866-910b-0410-8b05-ffd578937521

--- a/Frameworks/StepTalk/GNUmakefile
+++ b/Frameworks/StepTalk/GNUmakefile
@@ -52,6 +52,10 @@ StepTalk_OBJC_FILES = \
     NSObject+additions.m \
     StepTalkScriptingInfo.m
 
+# FIXME: NOT FINISHED:
+#    STDistantConversation.m \
+#    STDistantEnvironment.m \
+
 STEPTALK_HEADER_FILES = \
     STBundleInfo.h \
     STConversation.h \
