--- a/Tools/GNUmakefile
+++ b/Tools/GNUmakefile
@@ -25,7 +25,8 @@ include $(GNUSTEP_MAKEFILES)/common.make
 TOOL_NAME = \
     stexec \
     stalk  \
-    stupdate_languages
+    stupdate_languages \
+    stenvironment
 
 COMMON_OBJC_FILES = \
         STExecutor.m 
@@ -41,7 +42,10 @@ stalk_OBJC_FILES = \
 
 stupdate_languages_OBJC_FILES =  \
         stupdate_languages.m
-    
+
+stenvironment_OBJC_FILES = \
+        stenvironment.m \
+        STEnvironmentProcess.m
 ADDITIONAL_TOOL_LIBS = -lStepTalk
 ADDITIONAL_INCLUDE_DIRS += -I../Frameworks/
 ADDITIONAL_LIB_DIRS += -L../Frameworks/StepTalk/StepTalk.framework/Versions/Current/$(GNUSTEP_TARGET_LDIR)
