--- a/Modules/AppKit/ScriptingInfo.plist
+++ b/Modules/AppKit/ScriptingInfo.plist
@@ -60,6 +60,7 @@
         NSMenuView,
         NSMutableAttributedString,
         NSMutableParagraphStyle,
+        NSNib,
         NSNibConnector,
         NSNibControlConnector,
         NSNibOutletConnector,
