Added NSString containsString: to Foundation module.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@19778 72102866-910b-0410-8b05-ffd578937521

--- a/Modules/Foundation/GNUmakefile
+++ b/Modules/Foundation/GNUmakefile
@@ -27,6 +27,7 @@ BUNDLE_NAME = Foundation
 Foundation_OBJC_FILES = \
         STFoundationModule.m \
         FoundationConstants.m  \
+        NSString+additions.m \
         NSFileManager+additions.m
         
 Foundation_PRINCIPAL_CLASS = STFoundationModule
