Introduced contexts finally commited
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@20518 72102866-910b-0410-8b05-ffd578937521

--- a/Frameworks/StepTalk/GNUmakefile
+++ b/Frameworks/StepTalk/GNUmakefile
@@ -30,6 +30,7 @@ StepTalk_OBJC_FILES = \
     STBehaviourInfo.m \
     STBundleInfo.m \
     STClassInfo.m \
+    STContext.m \
     STConversation.m \
     STEngine.m \
     STEnvironment.m \
@@ -58,6 +59,7 @@ StepTalk_OBJC_FILES = \
 
 STEPTALK_HEADER_FILES = \
     STBundleInfo.h \
+    STContext.h \
     STConversation.h \
     STEngine.h \
     STEnvironment.h \
@@ -82,10 +84,7 @@ StepTalk_HEADER_FILES = $(STEPTALK_HEADER_FILES) \
                             StepTalk.h
 
 
-StepTalk_RESOURCE_FILES = ScriptingInfo.plist        
-
-STEPTALK_LIBRARY_DIR = $(GNUSTEP_INSTALLATION_DIR)/Library/StepTalk
-STEPTALK_ENVDEFS_DIR = $(STEPTALK_LIBRARY_DIR)/Environments
+StepTalk_RESOURCE_FILES = ScriptingInfo.plist Environments
 
 ADDITIONAL_CPPFLAGS += -pipe 
 ADDITIONAL_OBJCFLAGS = -Wno-import -DSTEPTALK_VERSION=$(STEPTALK_VERSION)
