--- a/Frameworks/StepTalk/ScriptingInfo.plist
+++ b/Frameworks/StepTalk/ScriptingInfo.plist
@@ -8,6 +8,8 @@
         STScriptsManager,
         STBundleInfo,
         STEngine,
-        STScriptObject
+        STScriptObject,
+        STConversation,
+        STContext
     );
 }
