added actor class
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@21382 72102866-910b-0410-8b05-ffd578937521

--- a/Frameworks/StepTalk/GNUmakefile
+++ b/Frameworks/StepTalk/GNUmakefile
@@ -27,6 +27,7 @@ FRAMEWORK_NAME = StepTalk
 
 StepTalk_OBJC_FILES = \
     NSInvocation+additions.m \
+    STActor.m \
     STBehaviourInfo.m \
     STBundleInfo.m \
     STClassInfo.m \
@@ -58,6 +59,7 @@ StepTalk_OBJC_FILES = \
 #    STDistantEnvironment.m \
 
 STEPTALK_HEADER_FILES = \
+    STActor.h \
     STBundleInfo.h \
     STContext.h \
     STConversation.h \
