--- a/Frameworks/StepTalk/ScriptingInfo.plist
+++ b/Frameworks/StepTalk/ScriptingInfo.plist
@@ -2,6 +2,7 @@
     ScriptingInfoClass = StepTalkScriptingInfo;
     
     Classes = (
+        STActor,
         STEnvironment,
         STLanguage,
         STScript,
