reflect framework changes
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@21698 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Smalltalk/GNUmakefile
+++ b/Languages/Smalltalk/GNUmakefile
@@ -30,6 +30,7 @@ Smalltalk_OBJC_FILES = \
         SmalltalkEngine.m \
         NSArray+additions.m \
         NSNumber+additions.m \
+        NSObject+additions.m \
         NSString+additions.m \
         STBlock.m \
         STBlockContext.m \
