Update the language template
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@21720 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/MyLanguage/MyLanguageInfo.plist
+++ b/Languages/MyLanguage/MyLanguageInfo.plist
@@ -1,4 +1,9 @@
 {
     /* Array of file types of your language scripts */
-    STFileTypes = ( "mylang" );
+    StepTalkLanguages = {
+        MyLanguage = {
+                FileTypes = ("mylang");
+                EngineClass = "MyLanguageEngine";
+            }
+    }
 }
