Updated to use GNUSTEP_LIBRARY instead of GNUSTEP_INSTALLATION_DIR/Library
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@24554 72102866-910b-0410-8b05-ffd578937521

--- a/Languages/Guile/GNUmakefile
+++ b/Languages/Guile/GNUmakefile
@@ -24,7 +24,7 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 BUNDLE_NAME        = Guile
 BUNDLE_EXTENSION  := .stlanguage
-BUNDLE_INSTALL_DIR:=$(GNUSTEP_INSTALLATION_DIR)/Library/StepTalk/Languages
+BUNDLE_INSTALL_DIR:=$(GNUSTEP_LIBRARY)/StepTalk/Languages
     
 Guile_OBJC_FILES = \
         GuileEngine.m 
