--- a/Modules/SimpleTranscript/GNUmakefile
+++ b/Modules/SimpleTranscript/GNUmakefile
@@ -32,7 +32,7 @@ SimpleTranscript_PRINCIPAL_CLASS = SimpleTranscriptModule
         
 SimpleTranscript_RESOURCE_FILES = ScriptingInfo.plist
 
-BUNDLE_INSTALL_DIR:=$(GNUSTEP_INSTALLATION_DIR)/Library/StepTalk/Modules
+BUNDLE_INSTALL_DIR:=$(GNUSTEP_LIBRARY)/StepTalk/Modules
 
 ADDITIONAL_BUNDLE_LIBS = -lStepTalk
 ADDITIONAL_INCLUDE_DIRS += -I../../Frameworks/
