--- a/Languages/Smalltalk/GNUmakefile
+++ b/Languages/Smalltalk/GNUmakefile
@@ -24,7 +24,7 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 BUNDLE_NAME        = Smalltalk
 BUNDLE_EXTENSION  := .stlanguage
-BUNDLE_INSTALL_DIR:=$(GNUSTEP_INSTALLATION_DIR)/Library/StepTalk/Languages
+BUNDLE_INSTALL_DIR:=$(GNUSTEP_LIBRARY)/StepTalk/Languages
     
 Smalltalk_OBJC_FILES = \
         SmalltalkEngine.m \
