* Modules/GDL2/GNUmakefile: Use ADDITIONAL_NATIVE_LIBS instead of    GDL2_BUNDLE_LIBS to link GDL2 packages.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@26980 72102866-910b-0410-8b05-ffd578937521

--- a/Modules/GDL2/GNUmakefile
+++ b/Modules/GDL2/GNUmakefile
@@ -35,7 +35,7 @@ GDL2_PRINCIPAL_CLASS = STGDL2Module
         
 GDL2_RESOURCE_FILES = ScriptingInfo.plist
 
-GDL2_BUNDLE_LIBS += -lgnustep-db2 -lgnustep-db2control -lgnustep-db2modeler
+ADDITIONAL_NATIVE_LIBS += EOAccess EOControl EOModeler
 
 ADDITIONAL_BUNDLE_LIBS = -lStepTalk
 ADDITIONAL_INCLUDE_DIRS += -I../../Frameworks/
