Update StepTalk's AppKit notification list to match recent change in gui.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/steptalk/trunk@31912 72102866-910b-0410-8b05-ffd578937521

--- a/Modules/AppKit/GNUmakefile
+++ b/Modules/AppKit/GNUmakefile
@@ -57,7 +57,7 @@ AppKitEvents.m : AppKitEvents.list
 AppKitExceptions.m : AppKitExceptions.list
 AppKitNotifications.m : AppKitNotifications.list
 
-%.m : %.list
+%.m : %.list header.m footer.m
 	    @( echo Creating $@ ...; \
 	        cat header.m  | sed "s/@@NAME@@/`basename $< .list`/g" > $@;  \
 	        cat $< | awk -f create_constants.awk >> $@;\
